# magical-osu

./: .env.example  .gitignore  CLAUDE.md  README.md  hakyll-site.cabal  package.json  pr-meta.json  site.hs  stack.yaml  tsconfig.json
.githooks/: pre-commit
.github/: pr-meta.json
.github/workflows/: build-and-generate.yml  sync-pr.yml
.ipynb_checkpoints/: README-checkpoint.md  hakyll-site-checkpoint.cabal  site-checkpoint.hs
docs/: index.html  sitemap.xml
docs/blog/: index.html
docs/blogs/: example_post_title.html
docs/css/: default.css
docs/js/: main.js
docs/song1/: index.html
docs/tab1/: index.html
docs/tab2/: index.html
docs/tab3/: index.html
docs/tutorial/: index.html
src/: Compilers.hs  Config.hs  Context.hs  Routes.hs  Slug.hs
src/blogs/.ipynb_checkpoints/: 0000-00-00-example-post-checkpoint.md
src/scss/: _base.scss  _dark-mode.scss  _fonts.scss  _home.scss  _lang-toggle.scss  _responsive.scss  _song.scss  _tutorial.scss  _variables.scss  default.scss
src/songs/song1/: timings.json
src/tabs/: home.md  info.md  song1.md  tab1.md  tab2.md  tab3.md  tutorial.md
src/tabs/.ipynb_checkpoints/: blog-checkpoint.md
src/templates/: blog_list.html  blog_post.html  default.html  footer.html  header.html  home.html  imports.html  lang_toggle.html  sitemap.xml  song.html  tutorial.html
src/ts/: game.ts  lang.ts  main.ts  song.ts  storyboard.ts  textalive.ts  utils.ts
src/ts/react/: GameSurface.tsx  HomeLayoutSwitcher.tsx  (+1 more)
static/: robots.txt
wiki/: 6W2N_chorus_timings.jsonc  gameplay.md  how_to_map.md  main.md  visuals.md
