name:               hakyll-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
                  , .
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , text == 2.1.2
                  , filepath == 1.5.4.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  other-modules:    Context
                  , Config
                  , Compilers